# sophos-firewall-sdk

./: .buildinfo  .gitignore  .pylintrc  .readthedocs.yaml  CODEOWNERS  README.md  admin.html  api_client.html  authen.html  backup.html  examples.html  firewallapi.html  firewallrule.html  fwapi.py  genindex.html  host.html  index.html  ips.html  modules.html  network.html  objects.inv  profile.html  py-modindex.html  pyproject.toml  reports.html  search.html  searchindex.js  service.html  system.html  unicastroute.j2  usage.html  web.html
.doctrees/: admin.doctree  api_client.doctree  authen.doctree  backup.doctree  environment.pickle  examples.doctree  firewallapi.doctree  firewallrule.doctree  host.doctree  index.doctree  ips.doctree  modules.doctree  network.doctree  profile.doctree  reports.doctree  service.doctree  system.doctree  usage.doctree  web.doctree
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: blackduck.yaml  documentation.yaml  release.yaml  tests.yaml
_modules/: admin.html  api_client.html  authen.html  backup.html  firewallapi.html  firewallrule.html  host.html  index.html  ips.html  network.html  profile.html  reports.html  service.html  system.html  web.html
_modules/sophosfirewall_python/: api_client.html
_sources/: admin.rst.txt  api_client.rst.txt  backup.rst.txt  examples.rst.txt  firewallapi.rst.txt  firewallrule.rst.txt  host.rst.txt  index.rst.txt  ips.rst.txt  modules.rst.txt  network.rst.txt  profile.rst.txt  reports.rst.txt  service.rst.txt  usage.rst.txt
docs/: authen.rst  conf.py  examples.rst  index.rst  modules.rst  system.rst  usage.rst  web.rst
sophosfirewall-python/: sophosfirewall.py
sophosfirewall_python/: admin.py  api_client.py  authen.py  backup.py  firewallapi.py  firewallrule.py  firewallrulegroup.py  host.py  ips.py  network.py  profile.py  reports.py  service.py  system.py  unittests.py  urlgroup_example.j2  utils.py  web.py
sophosfirewall_python/tests/: functional.py  (+2 more)
templates/: createfwrule.j2  createhostgroup.j2  createiphost.j2
(+59 files in other folders)
