[tool.poetry]
name = "sophosfirewall-python"
version = "0.1.8"
description = "Python SDK for Sophos Firewall"
authors = ["Matt Mullen <matt.mullen@sophos.com>"]
readme = "README.md"
packages = [{include = "sophosfirewall_python"}]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.13.0"
requests = "^2.31.0"
jinja2 = "^3.1.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
bandit = "^1.7.5"
black = "^23.7.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
