[tool.poetry]
name = "sophosfirewall-python"
packages = [
    { include = "sophosfirewall_python" },
]
version = "0.1.55"
description = "Python SDK for Sophos Firewall"
authors = ["Matt Mullen <matt.mullen@sophos.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
Jinja2 = "^3.1.2"
xmltodict = "^0.13.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.9.1"
pylint = "^3.0.1"
pytest = "^7.4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
